--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ListaEnlazadas.jar
+dist.jar=${dist.dir}/P001_ARRAYS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ListaEnlazadas
+dist.jlink.output=${dist.jlink.dir}/P001_ARRAYS
 excludes=
 file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
 file.reference.jar_files.zip=lib/jar_files.zip
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ListaEnlazadas
+jlink.launcher.name=P001_ARRAYS
 main.class=Vista.frmPersona
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
